--- a/department-service.properties
+++ b/department-service.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Register with Eureka Server 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.boot.message= Hello, Department Service
