--- a/department-service.properties
+++ b/department-service.properties
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 #Register with Eureka Server 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message= Hello, Department Service
+spring.boot.message= Hello, Department Service form config repo 
